WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208015
REGRESSION (
r255677
): Reloading tab with beforeunload prompt closes tab when asking to stay on page
https://bugs.webkit.org/show_bug.cgi?id=208015
Summary
REGRESSION (r255677): Reloading tab with beforeunload prompt closes tab when ...
Chris Dumez
Reported
2020-02-20 10:31:36 PST
Reloading tab with beforeunload prompt closes tab when asking to stay on page since
r255677
.
Attachments
Patch
(5.19 KB, patch)
2020-02-20 10:45 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-02-20 10:31:50 PST
<
rdar://problem/59591630
>
Chris Dumez
Comment 2
2020-02-20 10:45:08 PST
Created
attachment 391304
[details]
Patch
Geoffrey Garen
Comment 3
2020-02-20 10:48:23 PST
Comment on
attachment 391304
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2020-02-20 12:06:23 PST
Comment on
attachment 391304
[details]
Patch Clearing flags on attachment: 391304 Committed
r257077
: <
https://trac.webkit.org/changeset/257077
>
WebKit Commit Bot
Comment 5
2020-02-20 12:06:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug