Cherry-pick r257077. rdar://problem/59676877

REGRESSION (r255677): Reloading tab with beforeunload prompt closes tab when asking to stay on page
    https://bugs.webkit.org/show_bug.cgi?id=208015
    <rdar://problem/59591630>

    Reviewed by Geoffrey Garen.

    Source/WebKit:

    Make sure we only restart the tryClose timer after the beforeunload prompt if the timer was actually
    active before the prompt (i.e. tryClose was actually called). On Reload, tryClose is not called
    but beforeunload prompt may still happen.

    * UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::runBeforeUnloadConfirmPanel):

    Tools:

    Add API test coverage.

    * TestWebKitAPI/Tests/WebKitCocoa/ModalAlerts.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/220989@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257077 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.403@safari-609.1.20.111-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.20.111-branch@257229 268f45cc-cd09-0410-ab3c-d52691b4dbfc